week 4 fixes
